--- a/style.css
+++ b/style.css
@@ -623,7 +623,8 @@ nav a {
         flex-direction: column; /* Stack the brand and the links vertically */
         padding: 10px; /* Reduced padding */
         align-items: flex-start; /* Align items to the start of the nav bar */
-        padding-bottom: 20px; /* Add padding to the bottom */
+        padding-top: 0px; /* Add padding to the bottom */
+        padding-bottom: 30px; /* Add padding to the bottom */
 
     }
 
