--- a/style.css
+++ b/style.css
@@ -448,6 +448,12 @@ nav a {
 
   }
   
+    .testimonial:hover {
+        background-color: #f0e1c2; /* Change the background color on hover */
+        color: #333; /* Change the text color on hover */
+        transition: background-color 0.3s, color 0.3s; /* Add a smooth transition effect */
+    }
+
   /* FAQ Section Styling */
   .landing-faq {
     margin: 20px; /* Add margin to all sides */
@@ -491,8 +497,8 @@ nav a {
   .offerings:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a shadow on hover */
     border-radius: 10px; /* Add rounded corners with a specified radius */
-
 }
+
   .offerings ul li {
     list-style-type: disc;
     padding-top: 5px; /* Adjust this value as needed for spacing */
@@ -697,6 +703,17 @@ nav a {
         background-color: #e4d6be; /* Apply the hover background color by default */
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Apply the hover box shadow by default */
         border-radius: 10px; /* Apply the hover border radius by default */
+    }
+    .testimonial {
+        background-color: #f0e1c2; /* Change the background color on hover */
+        color: #333; /* Change the text color on hover */
+        transition: background-color 0.3s, color 0.3s; /* Add a smooth transition effect */
+    }
+    .benefit {
+        background-color: #e4d6be; /* Change background color on hover */
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a shadow on hover */
+        border-radius: 10px; /* Add rounded corners with a specified radius */
+    
     }
 }
 
