--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ header h1 {
     width: 85%;
     margin: auto;
     overflow: hidden;
+    flex: 1; /* Allows content to grow and occupy any available space */
 }
 
   .about, .portfolio, .contact {
@@ -211,19 +212,7 @@ nav a {
     background-color: #f0e1c2; 
 
   }
-  
 
-  .contact-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2rem;
-    
-  }
-  
-  .contact-form {
-    flex-basis: 45%;
-  }
   
   input[type="text"],
   input[type="email"],
@@ -246,7 +235,7 @@ nav a {
     border-color: #555;
   }
   
-    .cta-button {
+  .cta-button {
     width: 100%;
     font-size: 1.25rem; /* Adjusted font size for readability */
     padding: 15px 30px; /* Increased padding for a larger button */
@@ -277,6 +266,8 @@ nav a {
     display: flex;
     justify-content: right; 
     align-items: center; /* This will center the image verti */
+    margin-bottom: 1rem; /* Aligns with margin-bottom of input fields */
+
   }
   
   .contact-image img {
@@ -285,51 +276,8 @@ nav a {
     border-radius: 8px;
     opacity: .9; /* Adjust opacity as needed */
     display: block; /* Make sure the image is a block-level element to fit the container */
-  }
-  
+    padding: 1rem; /* Padding to align with the inputs and button */
 
-  .landing-contact-container {
-    max-width: 600px; /* Adjust width as needed */
-    margin-right: auto; /* Aligns the container to the right */
-    margin-left: 0; /* Keeps the container to the left */
-    padding: 0rem;
-  }
-  
-  .landing-contact-form input,
-  .landing-contact-form textarea,
-  .landing-contact-form input[type="submit"] {
-    width: 100%;
-    padding: 1rem;
-    font-size: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-bottom: 1rem;
-    box-sizing: border-box;
-  }
-  
-  .landing-contact-form input[type="submit"] {
-    width: 100%;
-    font-size: 1.25rem; /* Adjusted font size for readability */
-    padding: 15px 30px; /* Increased padding for a larger button */
-    margin-top: 1rem; /* Space above the button */
-    cursor: pointer; /* Changes cursor to pointer when hovering over the button */
-    transition: all 0.3s ease; /* Smooth transition for hover effects */
-    background-color: #F08080; 
-    border: none; /* No border */
-    color: white; /* White text */
-    border-radius: 5px; /* Slightly rounded corners for a modern look */
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Modern-looking font */
-    text-transform: uppercase; /* Makes text uppercase */
-    letter-spacing: 0.05em; /* Adds spacing between letters */
-  }
-  
-  .landing-contact-form input[type="submit"]:hover {
-    background-color: #C06070; /* A darker shade of blue for hover */
-  }
-  .landing-contact-form input[type="submit"]:focus {
-    background-color: #C06070; /* A darker shade of blue for hover */
-    outline: none; /* Removes the outline on focus for a clean look */
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1); /* More pronounced shadow on hover for depth */
   }
   
   /* Responsive styles if needed */
@@ -367,10 +315,10 @@ nav a {
  /* Landing Header Styling */
 .landing-header {
     border-radius: 10px; /* Add rounded corners with a specified radius */
-
+    font-size: 1.5rem;
     position: relative; /* Ensure the pseudo-element is positioned in relation to this */
     color: #ffffff; /* White text color for better contrast */
-    padding: 200px 10px; /* More padding for a spacious header */
+    padding: 200px 20px; /* More padding for a spacious header */
     overflow: hidden; /* Prevents the pseudo-element from causing scrollbars */
     
   }
@@ -493,16 +441,84 @@ nav a {
     font-weight: bold; /* Bold font for FAQ questions */
   }
   
-  .landing-cta {
-    margin-bottom: 50px; /* Adjust the value as needed */
-    
+  .landing-contact-container {
+    display: flex; /* Enables flexbox layout */
+    align-items: flex-start; /* Aligns children to the start of the cross axis */
+  }
+
+  .form-container {
+    flex: 1; /* Allows the form-container to take the available space */
+    display: flex; /* Establishes a flex context for the form and privacy statement */
+    flex-direction: column; /* Stacks the form and privacy statement vertically */
+    justify-content: space-between; /* Positions the form at the top and the privacy statement at the bottom */
+  }
+/* Assigns flex values to make the form two-thirds and profile pic one-third */
+.landing-contact-form {
+    flex: 2; /* Allows the form to grow and fill two parts of the container */
+    margin-right: 200px; /* Adds some space between the form and the image */
+}
+
+.profile-pic {
+  flex: 0 0 auto; /* Do not grow, do not shrink, and be based on the actual width of the image */
+  width: 300px; /* Fixed width for the profile pic */
+  height: auto; /* Maintain aspect ratio */
+  border-radius: 50%; /* Makes the image round */
+  /* Remove align-self if you don't need to align the image separately from the container */
+  margin-left: 20px; /* Adds some space between the form and the image */
+}
+
+/* Styling for all input types including the submit button */
+.landing-contact-form input,
+.landing-contact-form textarea {
+    width: 100%; /* Makes input fields take the full width of the form container */
+    box-sizing: border-box; /* Include padding and border in the width */
+    margin-bottom: 10px; /* Adds space between input fields */
+}
+
+/* Styling for all input types including the submit button */
+.landing-contact-form input,
+.landing-contact-form textarea {
+    width: 100%; /* Makes input fields take the full width of the form container */
+    box-sizing: border-box; /* Include padding and border in the width */
+    margin-bottom: 10px; /* Adds space between input fields */
+}
+
+.cta-landing-button {
+  width: 100%;
+  box-sizing: border-box; /* Include padding in the width calculation */
+  white-space: normal;
+}
+
+.landing-contact-form input[type="submit"] {
+  width: 100%;
+  font-size: 1.25rem; /* Adjusted font size for readability */
+  padding: 15px 30px; /* Increased padding for a larger button */
+  margin-top: 1rem; /* Space above the button */
+  cursor: pointer; /* Changes cursor to pointer when hovering over the button */
+  transition: all 0.3s ease; /* Smooth transition for hover effects */
+  background-color: #F08080; 
+  border: none; /* No border */
+  color: white; /* White text */
+  border-radius: 5px; /* Slightly rounded corners for a modern look */
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Modern-looking font */
+  text-transform: uppercase; /* Makes text uppercase */
+  letter-spacing: 0.05em; /* Adds spacing between letters */
+}
+
+.landing-contact-form input[type="submit"]:hover {
+  background-color: #C06070; /* A darker shade of blue for hover */
+}
+.landing-contact-form input[type="submit"]:focus {
+  background-color: #C06070; /* A darker shade of blue for hover */
+  outline: none; /* Removes the outline on focus for a clean look */
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1); /* More pronounced shadow on hover for depth */
 }
 
 .section-divider {
     background: linear-gradient(to left, #eacc9d, #e9a941);
     height: 2px;
     width: 100%;
-    margin: 50px 0;
+    margin: 30px 0;
     
   }
 
@@ -626,6 +642,17 @@ nav a {
 
 }
 
+.contact-container {
+  padding: 0px 0px;
+  margin-bottom: 50px;
+}
+.contact-container h1 {
+  font-size: 2.5rem; /* Adjust the font size as needed */
+  font-weight: bold; /* Optional: if you want the font to be bold */
+  margin-bottom: 1rem; /* Adds some space below the header */
+  color: #333; /* Adjust the color as desired */
+}
+
 /* Hamburger menu */
 .hamburger {
     display: none; /* Hidden by default, will be shown in media query for mobile */
@@ -702,21 +729,7 @@ nav a {
     .navbar-brand a.active {
         background-color: transparent;
     }
-    .landing-contact-container {
-        width: 100%; /* Ensures the container fits within the screen size */
-        padding: 0 15px; /* Adjust padding as needed */
-        box-sizing: border-box; /* Include padding in the width calculation */
-    }
 
-    .landing-contact-form {
-        width: 100%; /* Full width to fit the container */
-    }
-
-    .cta-landing-button {
-        width: 100%; /* Full width to fit the container */
-        box-sizing: border-box; /* Include padding in the width calculation */
-        white-space: normal;
-    }
     .project {
         background-color: #e4d6be; /* Apply the hover background color by default */
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Apply the hover box shadow by default */
