--- a/style.css
+++ b/style.css
@@ -764,15 +764,10 @@ nav a {
     }
     .landing-contact-form {
       width: 100%;
+      text-wrap: wrap;
     }
   
-    .landing-contact-form input,
-  .landing-contact-form textarea,
-  .landing-contact-form .cta-landing-button {
-    width: 100%; /* Subtract the total horizontal padding from the width */
-    padding: 20px 20px;
-    box-sizing: border-box; /* Include padding and border in the element's total width */  }
-}
+ 
 
 
 
