--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ nav a {
   input[type="email"],
   textarea,
   input[type="submit"] { /* Add input[type="submit"] here */
-    width: 100%;
+    width: 80%;
     padding: 1rem;
     font-size: 1rem; /* Increased font size */
     border: 1px solid #ccc;
@@ -760,13 +760,15 @@ nav a {
       flex-direction: column; /* Stack form and image vertically on mobile */
       align-items: center; /* Center-align the items on mobile */
       margin-right: 0; /* Remove right margin on mobile */
-
+      
     }
     .landing-contact-form {
       width: 100%;
-      text-wrap: wrap;
     }
-}
+    .form-container {
+      padding: 40px; /* Add padding to the left side */
+    }
+  }
  
 
 
