--- a/style.css
+++ b/style.css
@@ -757,23 +757,20 @@ nav a {
     }
     .contact-container {
       display: flex;
-      flex-direction: column;
       align-items: center; 
     }
    
     .landing-contact-container {
       flex-direction: column; /* Stack form and image vertically on mobile */
-      align-items: center; /* Center-align the items on mobile */
       margin-right: 0; /* Remove right margin on mobile */
-      margin-left: 30px; /* Remove right margin on mobile */
+      margin-left: 0px; /* Remove right margin on mobile */
 
     }
     .landing-contact-form {
       width: 80%;
     }
     .form-container {
-      /*padding: 20px;  Add padding to the left side */
-      align-items: left;
+      padding: 20px; /* Add padding to the left side */
 
     }
     
