--- a/style.css
+++ b/style.css
@@ -522,24 +522,25 @@ nav a {
   }
 
   .offerings {
-    padding: 10px 20px; /* Padding around the testimonials */
-    background-color: #e4d6be; /* Change background color on hover */
+    padding: 0px 0px; 
     border-radius: 10px; /* Add rounded corners with a specified radius */
-
+    margin-bottom: 40px;
   }
 
-  .offerings:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a shadow on hover */
-    border-radius: 10px; /* Add rounded corners with a specified radius */
+.offerings ul {
+  padding-left: 0; /* Removes padding from the left */
+  margin-left: 0; /* Removes margin from the left */
+  list-style-type: none; /* Removes the default list item bullets */
 }
 
-  .offerings ul li {
-    list-style-type: none;
-    padding-top: 5px; /* Adjust this value as needed for spacing */
-    padding-bottom: 5px; /* Adjust this value as needed for spacing */
-    list-style-position: outside;
-    padding: 10px 10px;
-
+.offerings ul li {
+  border-radius: 10px; /* Add rounded corners with a specified radius */
+  padding: 10px 10px;
+  margin: 10px 0px;
+  background-color: #f0e1c2; /* Change the background color on hover */
+  color: #333; /* Change the text color on hover */
+  transition: background-color 0.3s, color 0.3s; /* Add a smooth transition effect */
+  border-radius: 10px; /* Add rounded corners with a specified radius */
 }
 
 .offerings ul li:hover {
@@ -550,12 +551,21 @@ nav a {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Apply the hover box shadow by default */
 }
 
-/* .servicesai {
-    background-color: #e4d6be; /* Change background color on hover 
-    border-radius: 10px; /* Add rounded corners with a specified radius 
-    padding: 10px 20px; /* Padding around the testimonials 
+ .servicesai {
+    background-color: #f0e1c2; /* Change background color on hover */
+    border-radius: 10px; /* Add rounded corners with a specified radius */
+    padding: 10px 10px; 
+    margin: 10px 0px;
+
   }
-*/
+  .servicesai p {
+    margin: 0; /* Reset default margins for <p> tags */
+}
+
+  .servicesai:hover {
+    border-radius: 10px; /* Add rounded corners with a specified radius */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Apply the hover box shadow by default */
+  }
 
   /* Add a global box-shadow setting for card-like elements */
 .card-shadow {
@@ -763,7 +773,7 @@ nav a {
         border-radius: 10px; /* Add rounded corners with a specified radius */
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Apply the hover box shadow by default */
         padding: 10px 10px;
-        margin: 10px 10px;
+        margin: 10px 0px;
     }
     
     
