--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ nav a {
     right: 0;
     bottom: 0;
     left: 0;
-    background: url('/assets/animation.gif') no-repeat center center/cover; /* Path to your image */
+    background: url('/assets/animation_main.gif') no-repeat center center/cover; /* Path to your image */
     filter: blur(4px); /* Adjust the px value to increase/decrease the amount of blur */
     z-index: -1; /* Ensure the image stays behind the content */
   }
@@ -380,16 +380,48 @@ nav a {
   }
   
   /* Benefit Section Styling */
-  .landing-benefits .benefit {
+  .landing-benefits {
     margin-bottom: 30px; /* Space between benefit items */
   }
   
+  .benefit {
+    background-color: #E4DCCF;
+    border-radius: 10px;
+    display: flex; /* Enable flexbox */
+    align-items: center; /* Vertically center the content */
+    margin-top: 0px;
+    align-items: flex-start;
+  }
+
+  .benefit .benefit-text-content {
+    flex: 1;
+    padding: 20px;
+    padding-right: 50px;
+    margin-top: 0; /* Reset the top margin if needed */
+  }
+  .benefit-text-content h2 {
+    
+    margin-top: 0; /* Removes the top margin */
+    margin-bottom: 0.5rem; /* Adds a little space below the h2 */
+  }
+
+
   .benefit img {
-    height: 64px; /* Fixed height for icons */
-    width: auto; /* Auto width to maintain aspect ratio */
-    margin-bottom: 10px; /* Space between icon and text */
+    height: auto; /* Fixed height for icons */
+    width: 500px; /* Auto width to maintain aspect ratio */
+    border-radius: 30px;
+    padding: 20px;
+
   }
   
+.benefit:hover {
+  background-color: #e4d6be; /* Change background color on hover */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a shadow on hover */
+  border-radius: 10px; /* Add rounded corners with a specified radius */
+
+}
+
+
   /* Testimonial Section Styling */
   .landing-social-proof {
     background-color: #e4d6be; /* Light background for testimonials */
@@ -582,15 +614,7 @@ nav a {
     padding: 20px; /* Add padding for spacing */
 }
 
-.benefit {
-    padding: 20px; /* Add padding for spacing */
-}
-.benefit:hover {
-    background-color: #e4d6be; /* Change background color on hover */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a shadow on hover */
-    border-radius: 10px; /* Add rounded corners with a specified radius */
 
-}
 
 .about-container {
   display: flex;
@@ -760,12 +784,8 @@ nav a {
         border-radius: 10px; /* Apply the hover border radius by default */
     }
 
-    .benefit {
-        background-color: #e4d6be; /* Change background color on hover */
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a shadow on hover */
-        border-radius: 10px; /* Add rounded corners with a specified radius */
-    
-    }
+
+
     .offerings ul li {
         background-color: #f0e1c2; /* Change the background color on hover */
         color: #333; /* Change the text color on hover */
