--- a/style.css
+++ b/style.css
@@ -280,8 +280,6 @@ nav a {
   }
   
 
-  
-  /* General Section Styling */
 /* General Section Styling */
 .tabcontent {
     padding: 50px 0; /* More vertical padding for breathing space */
@@ -483,18 +481,6 @@ nav a {
     font-weight: bold; /* Bold font for FAQ questions */
   }
   
-  .landing-contact-container {
-    display: flex; /* Enables flexbox layout */
-    align-items: flex-start; /* Aligns children to the start of the cross axis */
-  }
-
-  .form-container {
-    flex: 1; /* Allows the form-container to take the available space */
-    display: flex; /* Establishes a flex context for the form and privacy statement */
-    flex-direction: column; /* Stacks the form and privacy statement vertically */
-    justify-content: space-between; /* Positions the form at the top and the privacy statement at the bottom */
-    align-items: left;
-  }
 
 /* Assigns flex values to make the form two-thirds and profile pic one-third */
 .landing-contact-form {
@@ -502,14 +488,7 @@ nav a {
     margin-right: 200px; /* Adds some space between the form and the image */
 }
 
-.profile-pic {
-  flex: 0 0 auto; /* Do not grow, do not shrink, and be based on the actual width of the image */
-  width: 300px; /* Fixed width for the profile pic */
-  height: auto; /* Maintain aspect ratio */
-  border-radius: 50%; /* Makes the image round */
-  /* Remove align-self if you don't need to align the image separately from the container */
-  margin-left: 20px; /* Adds some space between the form and the image */
-}
+
 
 /* Styling for all input types including the submit button */
 .landing-contact-form input,
@@ -732,20 +711,7 @@ nav a {
 
 }
 
-.contact-container {
-  margin-bottom: 50px;
-  display: flex;
-  flex-direction: column;
 
-}
-
-.contact-container h1 {
-  text-align: left;
-  font-size: 2.5rem; /* Adjust the font size as needed */
-  font-weight: bold; /* Optional: if you want the font to be bold */
-  margin-bottom: 1rem; /* Adds some space below the header */
-  color: #333; /* Adjust the color as desired */
-}
 
 /* Hamburger menu */
 .hamburger {
@@ -757,12 +723,57 @@ nav a {
     cursor: pointer;
   }
 
-  .privacy-statement {
-    display: block; /* Ensure it takes its own line */
-    white-space: normal; /* Allows text to wrap */
-    text-align: left; /* Centers the text, if that is your design intention */
-    font-size: 0.9rem; /* Adjust font size if necessary for small screens */
+/* CONTACT TAB */
+  .contact-container {
+    margin-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+  
   }
+  
+  .contact-container h1 {
+    text-align: left;
+    font-size: 2.5rem; /* Adjust the font size as needed */
+    font-weight: bold; /* Optional: if you want the font to be bold */
+    margin-bottom: 1rem; /* Adds some space below the header */
+    color: #333; /* Adjust the color as desired */
+  }
+
+  /* Ensures the container of form and image uses flexbox to align children */
+  .landing-contact-container {
+    display: flex;
+    flex-direction: row; /* Align children in a row */
+    align-items: center; /* Vertically center the items */
+    justify-content: space-between; /* Space between form and image */
+    width: 100%; /* Ensure it spans the full width of its parent */
+  }
+
+  /* Ensure the form container takes up 2/3 of the space and profile picture 1/3 */
+  .form-container {
+    flex: 2; /* Takes up 2 parts of the available space */
+    max-width: 75%; /* Optionally restrict max width to 2/3 of parent */
+  }
+  .profile-pic {
+    width: 275px; /* Set your desired width in pixels */
+    height: 275px; /* Set height to the same value to maintain the aspect ratio */
+    border-radius: 50%; /* Keeps the image round */
+    margin-left: 200px; /* Adjust if needed for spacing */
+    object-fit: cover; /* This ensures the image covers the area without distortion */
+    align-self: center; /* This centers the profile picture vertically within the flex container */
+  }
+    
+.form-container iframe {
+  max-width: 100%;
+}
+
+.privacy-statement {
+display: block;
+text-align: center;
+margin-top: 20px; /* Optional: Adds some space above the privacy statement */
+}
+
+
+
 /* Media query for mobile screens */
 @media (max-width: 1024px) {
     body {
@@ -836,27 +847,18 @@ nav a {
         border-radius: 10px; /* Apply the hover border radius by default */
     }
 
-
-
-
-    
-    
     .landing-contact-container {
-      flex-direction: column; /* Stack form and image vertically on mobile */
-      margin-right: 0; /* Remove right margin on mobile */
-      margin-left: 0px; /* Remove right margin on mobile */
+      flex-direction: column; /* Stack form and image vertically */
+      align-items: center; /* Center align the items horizontally */
+    }
+  
+    .form-container, .profile-pic {
+      max-width: 100%; /* Both form and image take full width */
+      margin-left: 0; /* Reset left margin for the image */
+      margin-right: 0; /* Reset right margin for the image, if you've set one */
+      margin-bottom: 20px; /* Adds some space below each item when stacked */
+    }
 
-
-    }
-    .landing-contact-form {
-      width: 80%;
-    }
- 
-    .privacy-statement {
-      width: 80%;
-      font-size: 0.9rem; /* Adjust font size if necessary for small screens */
-      padding-bottom: 20px;
-    }
     .benefit {
       flex-direction: column; /* Stack children vertically */
       align-items: center; /* Center items horizontally for mobile */
@@ -880,7 +882,7 @@ nav a {
 }
   }
  
- 
+  
 
 /*
 @media (max-width: 768px) {
