--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
 }
 
 header h1 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     margin: 0;
 }
 
